--- a/openbsd-netcat/PKGBUILD
+++ b/openbsd-netcat/PKGBUILD
@@ -2,26 +2,25 @@
 # Contributor: Andrej Gelenberg <andrej.gelenberg@udo.edu>
 
 pkgname="openbsd-netcat"
-pkgver=1.190_2
+pkgver=1.218_2
 pkgrel=1
 pkgdesc="TCP/IP swiss army knife. OpenBSD variant."
 arch=('x86_64')
-url="http://packages.debian.org/sid/netcat-openbsd"
+url="https://salsa.debian.org/debian/netcat-openbsd"
 license=('BSD')
 depends=('libbsd')
 makedepends=('gcc' 'make')
 provides=('netcat')
 conflicts=('gnu-netcat')
-source=("http://ftp.debian.org/debian/pool/main/n/netcat-openbsd/netcat-openbsd_${pkgver%_*}.orig.tar.gz"
-	"http://ftp.debian.org/debian/pool/main/n/netcat-openbsd/netcat-openbsd_${pkgver/_/-}.debian.tar.xz")
-sha512sums=('32310813391f63b8283dc4a63e52821e464ecbfcd0ea995e8e15047c6252a86b31eb4725dc69b778594c43d6ce0cc081aa0f00d7cda0587c91941f20b93a33fe'
-            'c33510ad6761627e0b7e564747f6ae82c7569157bdc91f6a282a97b038b2b0917c27fdfba137462c7c34d84fcfdfe8b6393204884d153e3d200a86f5c6657a9a')
+source=("https://salsa.debian.org/debian/netcat-openbsd/-/archive/debian/${pkgver/_/-}/netcat-openbsd-debian-${pkgver/_/-}.tar.gz")
+sha512sums=('d10be99f7ebb03c0b0e3ad5d9ba04c6c1aac3d10556b324201cbf4f07736f5101db6e622720b5803dd32a31c6b5d4f12148331ba581789f14072a7fca55cb1eb')
+b2sums=('f0e74a7562223ecf73888adfb6936a2ee0a0851dd047cc98e4a2b77d4aca432ac56f050d6b5c1e675ee26b30eba7ba8e0fa0d7f253b1700a06fea89768bd5776')
 
 build() {
-  cd "$srcdir"/netcat-openbsd-${pkgver%_*}
-  for i in `cat ../debian/patches/series`; do
+  cd netcat-openbsd-debian-${pkgver/_/-}
+  for i in `cat debian/patches/series`; do
 	echo "** patch $i" 1>&2
-	cat "../debian/patches/$i"
+	cat "debian/patches/$i"
   done | patch -p1
   make \
 	CFLAGS="$CFLAGS -DDEBIAN_VERSION=\"\\\"${pkgrel}\\\"\" -I/usr/include/libbsd" \
@@ -29,7 +28,7 @@ build() {
 }
 
 package() {
-  cd "$srcdir"/netcat-openbsd-${pkgver%_*}
+  cd netcat-openbsd-debian-${pkgver/_/-}
   install -Dm0755 nc "$pkgdir"/usr/bin/nc
   ln -s nc "$pkgdir"/usr/bin/netcat
   install -Dm0644 nc.1 "$pkgdir"/usr/share/man/man1/nc.1
