--- a/diffoscope/PKGBUILD
+++ b/diffoscope/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Levente Polyak <anthraxx[at]archlinux[dot]org>
 
 pkgname=diffoscope
-pkgver=192
+pkgver=200
 pkgrel=1
 pkgdesc='Tool for in-depth comparison of files, archives, and directories'
 url='https://diffoscope.org/'
@@ -27,6 +27,7 @@ optdepends=(
   'fpc: Free Pascal utilities support'
   'java-environment: java utilities support'
   'libcaca: image compare support'
+  'libxmlb: binary XML blobs support'
   'llvm: LLVM bitcode files support'
   'lz4: lz4 compression support'
   'odt2txt: odt comparing support'
@@ -63,12 +64,12 @@ makedepends=('help2man' 'python-docutils' 'git')
 checkdepends=(
   'python-pytest' 'python-jsbeautifier' 'python-h5py' 'acl' 'binutils' 'bzip2' 'cdrtools' 'cpio' 'diffutils' 'e2fsprogs' 'enjarify'
   'hdf5' 'imagemagick' 'java-environment=11' 'fontforge' 'gettext' 'ghc' 'gnupg' 'mono' 'pgpdump' 'poppler' 'sqlite' 'squashfs-tools'
-  'lz4' 'unzip' 'gzip' 'tar' 'tcpdump' 'vim' 'xz' 'llvm' 'colord' 'fpc' 'openssh' 'openssl' 'odt2txt' 'docx2txt' 'r' 'dtc' 'giflib'
-  'gnumeric' 'python-progressbar' 'binwalk' 'python-argcomplete' 'zstd' 'uboot-tools')
+  'libxmlb' 'lz4' 'unzip' 'gzip' 'tar' 'tcpdump' 'vim' 'xz' 'llvm' 'colord' 'fpc' 'openssh' 'openssl' 'odt2txt' 'docx2txt' 'r' 'dtc'
+  'giflib' 'gnumeric' 'python-progressbar' 'binwalk' 'python-argcomplete' 'zstd' 'uboot-tools')
 source=(https://diffoscope.org/archive/diffoscope-${pkgver}.tar.bz2{,.asc})
-sha512sums=('0e6c4de5f68d2d75213b9a566280683a8b0baf333f86790b4e634811581de8e2feef097ccf8dd6c5a18445fde1a3261d09290820a566b59ec0e7b83a4045841f'
+sha512sums=('06c4a122df547501f435083d768332363a0c7114c3499c3cc3007a380dc052f1f68db608c55be7c12510e759b08a0cf0e6cc4c7cc283986b27ffbde401f201a6'
             'SKIP')
-b2sums=('29ddea8de97035e406d02cf99ca597cfd5ef18e1486a18fd188cd27d852190a019116fa7f072345853ab0f5e8ec77b249a8cfb9a0fcb00833e95a7f9abf8b98a'
+b2sums=('66ac1bb74d8f367869059061e9bd7bd0d15862124e38f3876e73a33f2a98ef14eac2064a14b86d36ab0e0a6a5a2282c00d50a357ec1c21e0dd81a15dd5f0bd01'
         'SKIP')
 validpgpkeys=("C2FE4BD271C139B86C533E461E953E27D4311E58") # "Chris Lamb <chris@chris-lamb.co.uk>"
 
