--- a/python-aiohttp/PKGBUILD
+++ b/python-aiohttp/PKGBUILD
@@ -1,11 +1,12 @@
 # Maintainer: Levente Polyak <anthraxx[at]archlinux[dot]org>
+# Maintainer: Jonas Witschel <diabonas@archlinux.org>
 # Contributor: Philipp A. <flying-sheep@web.de>
 
 _pkgname=aiohttp
 pkgname=python-aiohttp
-_gitcommit=208a4eb6dbf5373d9f5a9f18efac839a6448eadc
-pkgver=3.8.0
-pkgrel=1
+_gitcommit=cc6dc0c49f5d002485f9a3cdf9bc3127a3ac1388
+pkgver=3.8.1
+pkgrel=4
 pkgdesc='HTTP client/server for asyncio'
 url='https://aiohttp.readthedocs.io'
 arch=('x86_64')
@@ -24,8 +25,10 @@ optdepends=('gunicorn: to deploy using Gunicorn'
             'python-cchardet: for faster encoding detection'
             'python-brotli: for Brotli transfer-encodings support')
 source=(${pkgname}::"git+https://github.com/aio-libs/aiohttp#commit=${_gitcommit}"
+        non-derpy-tests.patch
         git+https://github.com/nodejs/llhttp.git)
 sha512sums=('SKIP'
+            'bb0a6b39f8200ef79d68cc5329c13814f60702a8fb929b1c0d64b5cff5602b6d0848fa2644b911bb637cfce0e235abf332f3769545dade4c52bfabd636369d55'
             'SKIP')
 
 pkgver() {
@@ -39,6 +42,9 @@ prepare() {
   git config submodule."vendor/llhttp".url "${srcdir}/llhttp"
   git submodule update --recursive
   sed 's|.install-cython ||' -i Makefile
+
+  # If these tests are passing, who are we to judge
+  patch -Np1 -i ../non-derpy-tests.patch
 
   # This test fails with the error "coroutine 'BaseTestServer.close' was never
   # awaited", which does not appear to be a packaging issue
@@ -57,7 +63,7 @@ check() {
 
   # Without --pythonwarnings=default, the test suite does not even start due to
   # an unrelated DeprecationWarning from python-packaging
-  PYTHONPATH="$PWD/build/lib.linux-$CARCH-${_python_version}" pytest --pythonwarnings=default
+  PYTHONDONTWRITEBYTECODE=1 PYTHONPATH="$PWD/build/lib.linux-$CARCH-${_python_version}" pytest --pythonwarnings=default
 }
 
 package() {
