--- a/lazygit/PKGBUILD
+++ b/lazygit/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: fuero <fuerob@gmail.com>
 
 pkgname=lazygit
-pkgver=0.31.3
+pkgver=0.32.1
 pkgrel=1
 pkgdesc='Simple terminal UI for git commands'
 url='https://github.com/jesseduffield/lazygit'
@@ -12,9 +12,9 @@ arch=('x86_64')
 license=('MIT')
 depends=('git' 'glibc')
 makedepends=('go')
-source=("https://github.com/jesseduffield/${pkgname}/archive/v${pkgver}/${pkgname}-${pkgver}.tar.gz")
-sha256sums=('7a9fcb0c5f1edf025d1e1f5fb21099770e0de7ed424af62e133bd9d4afffdc35')
-b2sums=('ba4131162f8aa187f9c1de9c301e47520d410320e36d56dcc3ed41d2432950a6b0e5b4482872c1400e8cec548a4454fdf5feebf442742df4debee37dd3e855f2')
+source=("${url}/archive/v${pkgver}/${pkgname}-${pkgver}.tar.gz")
+sha256sums=('58c8d21601ecdcdab47a127eb17cd4f2b71c40ec6d89eb98b3ccdeceef07aafd')
+b2sums=('a48bc7fe96f26075ab0c3c87ad6a3b9a25604db8706e4e2256ec8adf24ec93b621f6cea8629f3aebb9c871c6e61290cf5e35475db2375ea270af9f2d89a0d36d')
 
 build() {
   cd ${pkgname}-${pkgver}
