--- a/signal-desktop/PKGBUILD
+++ b/signal-desktop/PKGBUILD
@@ -3,25 +3,25 @@
 
 pkgname=signal-desktop
 _pkgname=Signal-Desktop
-pkgver=5.23.1
+pkgver=5.28.0
 pkgrel=1
 pkgdesc="Signal Private Messenger for Linux"
 license=('AGPL3')
 arch=('x86_64')
 url="https://signal.org"
 depends=('gtk3' 'libvips' 'libxss' 'hicolor-icon-theme')
-makedepends=('yarn' 'git' 'git-lfs' 'nodejs-lts-fermium' 'npm6' 'python')
+makedepends=('yarn' 'git' 'git-lfs' 'nodejs-lts-gallium' 'npm' 'python')
 source=(
   "${pkgname}-${pkgver}.tar.gz::https://github.com/signalapp/${_pkgname}/archive/v${pkgver}.tar.gz"
   "${pkgname}.desktop"
   "expire-from-source-date-epoch.patch"
 )
-sha512sums=('11f59c3aaa083d0d686bdafdb1fb3fafdbcfb42f21a81178c296e57ddc676498628d870570a44e4f676f1fb97d8a1e2feead781159552b643c6cef740da8142e'
+sha512sums=('30482917c15d1ee2648e943c422c1b67d412ca652783ffc9cac134e12e2c88101910109394fe27badd5332f8d09f40fb25df9f5132ed6f0aae7502bb29339314'
             '90cfee563a985bc73c4e7984715d190ae0b5c7aa887a7dc15c665980ca5cc8420b02f6c7a54e032c29e18876d5d51cfbe5027a9f0a59de3903f50fd469d73ce0'
-            '4bdb1812575072a838ce2183bab0b407e3f31bcdb81ee62f6a6424c459779bf7739e3c6c65cb06a191e5a10f940e140f51ddf50ab094023a8e8ce9497ed72e82')
-b2sums=('4ba850ffb7b06f42a45a48ab88c3a5cf20a81b21489cf94e4492b1f3154416bfeeac5dbff2f62cf089e7c1b840e3e50692bee6e3621007e87714f2d91c006e06'
+            '1154859e87d8a2d649bc23210f2dd8aa473f268166559a51a2a64fe6ae094c101121535623b05b711bd87aab1f219627e9274fa542fdb0e5fe6f34b46fd7b7df')
+b2sums=('47efc09819b7ba505d879522979dc3d004cad63f3071a6fa95f72f9e97d05b6609fd6a8647b9884be0e921f4792eaff7dba370902cd4f3ca08d2fdc526bced74'
         'b0974f1409bf77e917a3ecce68a9d066eaf24a6cd35e0d52b0d61fcf2fb014f19962bb445b6eaf668081d370c69c01b08420c056902907574a29a71a4f0f2457'
-        '4d1c85e4f5b0c797a679ad33f685c4ec1693a6d73b23dd10565d1b1a560558ca50c283e7e652dbab891150c70f0accb1d5dd011c7c87a11efb9714ef1ab5e8c5')
+        '5a6dba4bfa799403ace721b143c5b54d3bff97ab0c3d30e94d312cf58ede2498886720247b0efcbbeffc0c95611a493625cef1f8bc06d3647b53ef2e44de96be')
 
 prepare() {
   cd "${_pkgname}-${pkgver}"
@@ -31,12 +31,6 @@ prepare() {
 
   # Allow higher Node versions
   sed 's#"node": "#&>=#' -i package.json
-
-  # patch better-sqlite3 to encapsulate sqlcipher
-  # https://bugs.archlinux.org/task/69980
-  # https://github.com/signalapp/better-sqlite3/pull/3
-  grep -q 32828e03be0489572ab334239c5768c86697989 package.json
-  sed 's|https://github\.com/signalapp/better-sqlite3#32828e03be0489572ab334239c5768c86697989|https://github.com/signalapp/better-sqlite3#917a6f5cf8b84d5ef4b8fe6dc0f4b8f59ca45bea|' -i package.json
 
   yarn install --ignore-engines
 
