--- a/libplacebo/PKGBUILD
+++ b/libplacebo/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Levente Polyak <anthraxx[at]archlinux[dot]org>
 
 pkgname=libplacebo
-pkgver=3.120.3
-pkgrel=3
+pkgver=4.157.0
+pkgrel=1
 pkgdesc='Reusable library for GPU-accelerated video/image rendering primitives'
 url='https://github.com/haasn/libplacebo'
 arch=('x86_64')
@@ -12,8 +12,8 @@ depends=('vulkan-icd-loader' 'libvulkan.so' 'glslang' 'lcms2' 'liblcms2.so' 'sha
 makedepends=('meson' 'ninja' 'vulkan-headers' 'python' 'python-mako')
 provides=('libplacebo.so')
 source=(https://code.videolan.org/videolan/libplacebo/-/archive/v${pkgver}/libplacebo-v${pkgver}.tar.gz)
-sha512sums=('6a2d3c6c053edc3a912a46f9c16d226d83c6f8880714f0b20a8b9417889616e4c1d4d41b8935b898cc580dc3b480ce974bb3921162165f0774ea91be1dfff520')
-b2sums=('6192570dba8de6e0bb98ccf3f0e4f13c01a27c5f97873ff0e5e3212d9b7cdebd98cce3d5ee5364ca8a585ec2a16d0bafc5a863ed35f6f225d86a4410b92edfd3')
+sha512sums=('efa909fe8e6f053322bdda64834038218ee313e7df7f6f03d049b38318f1627543b60d4902f968c67dd00ece4db0c8d2eb20e3dc7a43dd05a16700723cba1d5f')
+b2sums=('32b348bee195e95f503cea3cc26a7de18e8c40ea793c70649a6d1dea157ab233c2422cdf8d84b8449bce4594e4457a30753f51b1c38a76b3199769616ffa65c5')
 
 build() {
   cd ${pkgbase}-v${pkgver}
@@ -23,7 +23,8 @@ build() {
     -D vulkan=enabled \
     -D glslang=enabled \
     -D shaderc=enabled \
-    -D lcms=enabled
+    -D lcms=enabled \
+    -D d3d11=disabled
   ninja -C build
 }
 
