--- a/libcap/PKGBUILD
+++ b/libcap/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Hugo Doria <hugo@archlinux.org>
 
 pkgname=libcap
-pkgver=2.62
+pkgver=2.63
 pkgrel=1
 pkgdesc="POSIX 1003.1e capabilities"
 arch=(x86_64)
@@ -15,26 +15,22 @@ makedepends=(linux-api-headers)
 provides=(libcap.so libpsx.so)
 source=("https://kernel.org/pub/linux/libs/security/linux-privs/${pkgname}2/${pkgname}-$pkgver.tar."{xz,sign}
 )
-sha512sums=('61ac004920c5cd3382a5443db2eacfc2041b7a8c0814b27084c1d111125639fe3950dea4325d0f7fb6bfb0d5de114452c3a62230cc958edb05ffdb83b213f9b3'
+sha512sums=('832842b71ca32db8f53ca5f1a3010f14e7f42693f62f29632e9948c860f990899bb094165c37307ce8b9e5bc5eb1c833e780ebca98442df3e6d900e4b238834b'
             'SKIP')
-b2sums=('e3c86a5b88b9be932802ec8612f79e5f04912bf3e66f673eae2add85362292f4737c544d21b9e5adfd1a7a33c073568301b6532cdf0ea6c8b834d895b84323f1'
+b2sums=('a49a628f5b9ddf5a3d077428544a53b9cdedf62053ff296a0aa7d61e12ca05f9ba7597f20ee16a3843736bee2417a3d1585ad6b336651fcb3e4ee29b108cfa0f'
         'SKIP')
 validpgpkeys=(38A644698C69787344E954CE29EE848AE2CCF3F4) # Andrew G. Morgan <morgan@kernel.org>
 
 build() {
-  cd "$pkgname-$pkgver"
-  make DYNAMIC=yes KERNEL_HEADERS='/usr/include' lib='lib' prefix='/usr' sbindir='bin'
+  make DYNAMIC=yes KERNEL_HEADERS='/usr/include' lib='lib' prefix='/usr' sbindir='bin' -C "$pkgname-$pkgver"
 }
 
 check() {
-  cd "$pkgname-$pkgver"
-  make -k test
+  make test -k -C "$pkgname-$pkgver"
 }
 
 package() {
-  cd "$pkgname-$pkgver"
-  make DESTDIR="$pkgdir" RAISE_SETFCAP='no' lib='lib' prefix='/usr' sbindir='bin' install
-  # docs
-  install -vDm 644 {CHANGELOG,README} -t "${pkgdir}/usr/share/doc/${pkgname}/"
-  install -vDm 644 pam_cap/capability.conf -t "$pkgdir/usr/share/doc/$pkgname/examples/"
+  make DESTDIR="$pkgdir" RAISE_SETFCAP='no' lib='lib' prefix='/usr' sbindir='bin' install -C "$pkgname-$pkgver"
+  install -vDm 644 "$pkgname-$pkgver/"{CHANGELOG,README} -t "${pkgdir}/usr/share/doc/${pkgname}/"
+  install -vDm 644 "$pkgname-$pkgver/pam_cap/capability.conf" -t "$pkgdir/usr/share/doc/$pkgname/examples/"
 }
