--- a/kismet/PKGBUILD
+++ b/kismet/PKGBUILD
@@ -4,18 +4,18 @@
 # Contributor: Jason Chu <jason@archlinux.org>
 
 pkgname=kismet
-pkgver=2021_08_R1
+pkgver=2022_01_R1
 _realver="${pkgver//_/-}"
-pkgrel=4
+pkgrel=1
 pkgdesc="802.11 layer2 wireless network detector, sniffer, and intrusion detection system"
 url="https://www.kismetwireless.net/"
 arch=('x86_64')
 license=('GPL')
-depends=('libpcap' 'pcre' 'bluez-libs' 'libcap' 'libmicrohttpd' 'protobuf-c' 'libprotobuf-c.so'
+depends=('libpcap' 'pcre' 'bluez-libs' 'libcap' 'protobuf-c' 'libprotobuf-c.so'
          'sqlite' 'libnm' 'gcc-libs' 'libusb' 'libusb-1.0.so' 'libnl' 'glibc' 'zlib' 'libelf'
          'lm_sensors' 'systemd' 'python' 'python-setuptools' 'python-protobuf' 'python-pyserial'
-         'python-numpy' 'libwebsockets'
-         libpcap.so libmicrohttpd.so libprotobuf.so libnm.so libwebsockets.so libsensors.so)
+         'python-numpy' 'libwebsockets' 'libcap-ng'
+         libpcap.so libprotobuf.so libnm.so libwebsockets.so libsensors.so)
 makedepends=('python-setuptools')
 optdepends=(
   'gpsd: log coordinates of detected networks'
@@ -32,13 +32,12 @@ backup=(
   etc/kismet/kismet_httpd.conf
   etc/kismet/kismet_logging.conf
   etc/kismet/kismet_memory.conf
-  etc/kismet/kismet_storage.conf
   etc/kismet/kismet_uav.conf)
 install=kismet.install
 source=(https://www.kismetwireless.net/code/${pkgname}-${_realver}.tar.xz
         kismet.sysusers
         python-install-flags.patch)
-sha512sums=('91e86dc1d3b69aa8cb6dff4c4b8bb959dca128f06d1298effe1b23ed24158ce4285abdf2af838f48588b9e71c69f82538d1a002838c4bc1d053868118e394b7a'
+sha512sums=('30d651829d993514031f762df368e3c013bcedf89d8a6ba623a0e40a7f6ca4af75254171998fd13e6d370378faf9a916159f8f15f3d238abdda77d1a228519ae'
             '452b728c30c9932bdb91741af425267da87a66962ea9b736751948881f5477dee0bff8e2eeca2befdea2920da6d7d9e198bde69cef8c48bb49a0093a7f0ef897'
             'c24bff8ecc0288c0584f60760a27b364bf7b013aad809e4050bb6ed703fc60f3ea93f7e897717a6924333ac6734b20b99166846dae4a9c5c303ae1de39f6692c')
 validpgpkeys=('354689DF3C9DED803381A661D7B28822738BBDB1') # Michael Kershaw
