--- a/terragrunt/PKGBUILD
+++ b/terragrunt/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Andreas 'Segaja' Schleifer <archlinux at segaja dot de>
 
 pkgname=terragrunt
-pkgver=0.35.20
+pkgver=0.36.0
 pkgrel=1
 pkgdesc='Thin wrapper for Terraform that provides extra tools for working with multiple Terraform modules'
 url='https://github.com/gruntwork-io/terragrunt'
@@ -12,8 +12,9 @@ makedepends=('git' 'go')
 depends=('glibc' 'terraform')
 license=('MIT')
 source=("${url}/archive/v${pkgver}/${pkgname}-${pkgver}.tar.gz")
-sha256sums=('eeb81d773b8fc32a61a13738a146d1464ca82584b536cd73cc7db6edc5e08ca4')
-b2sums=('73782050dcddfa5a1de2a4cfc1cf264e1b245002e12bf3d74f6b7f835c74b46ca154ed11c1985512e0f2d910a605f1f2ba4747424c55458eed9f8687845fcbd1')
+sha256sums=('46e726ac6c38588ef0f98bfa69d01c3e1ea6425eada3b7b86b89110bfa516a95')
+b2sums=('852507f33f6b77f5886527fa4a9e1c3f39bbe1b3317af531d3b58f223dcfa42651715844288aa9b59372c780691f1186c5be35ba1c82555778d839c33a7976b1')
+options=('!lto')
 
 build() {
   cd ${pkgname}-${pkgver}
