--- a/zstd/PKGBUILD
+++ b/zstd/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=zstd
 pkgver=1.5.2
-pkgrel=1
+pkgrel=2
 pkgdesc='Zstandard - Fast real-time compression algorithm'
 url='https://facebook.github.io/zstd/'
 arch=(x86_64)
@@ -13,6 +13,7 @@ license=(BSD GPL2)
 depends=(glibc gcc-libs zlib xz lz4)
 makedepends=(gtest)
 provides=(libzstd.so)
+options=(debug)
 source=(https://github.com/facebook/zstd/releases/download/v${pkgver}/zstd-${pkgver}.tar.zst{,.sig})
 sha256sums=('3ea06164971edec7caa2045a1932d757c1815858e4c2b68c7ef812647535c23f'
             'SKIP')
