--- a/mpd/PKGBUILD
+++ b/mpd/PKGBUILD
@@ -8,7 +8,7 @@
 
 pkgname=mpd
 pkgver=0.23.5
-pkgrel=1
+pkgrel=2
 pkgdesc="Flexible, powerful, server-side application for playing music"
 arch=(x86_64)
 url="https://www.musicpd.org/"
@@ -77,8 +77,7 @@ package() {
 
   cd "${pkgname}-${pkgver}"
   DESTDIR="${pkgdir}" ninja -C build install
-  install -vDm 644 "doc/${pkgname}conf.example" \
-    -t "${pkgdir}/usr/share/doc/${pkgname}/"
+  install -vDm 644 "doc/${pkgname}conf.example" -t "${pkgdir}/usr/share/doc/${pkgname}/"
   install -vDm 644 "../${pkgname}.conf" -t "${pkgdir}/etc/"
   install -vDm 644 "../${pkgname}.sysusers" "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"
   install -vDm 644 "../${pkgname}.tmpfiles" "${pkgdir}/usr/lib/tmpfiles.d/${pkgname}.conf"
