upgpkg: haskell-timezone-series 0.1.9-12 remove dep provided by ghc-libs

--- a/haskell-timezone-series/PKGBUILD
+++ b/haskell-timezone-series/PKGBUILD
@@ -8,7 +8,7 @@ pkgdesc='Enhanced timezone handling for Data.Time'
 url='http://projects.haskell.org/time-ng/'
 license=('BSD')
 arch=('x86_64')
-depends=('ghc-libs' 'haskell-base' 'haskell-deepseq' 'haskell-time')
+depends=('ghc-libs')
 makedepends=('ghc')
 source=(https://hackage.haskell.org/package/${_hkgname}-${pkgver}/${_hkgname}-${pkgver}.tar.gz)
 sha256sums=('e5d35df5dc2408803120602b0a66ed63439e36b38dd0895f3e2159fcbd7d9cae')
