upgpkg: haskell-timezone-olson 0.2.0-6 remove dep provided by ghc-libs

--- a/haskell-timezone-olson/PKGBUILD
+++ b/haskell-timezone-olson/PKGBUILD
@@ -8,8 +8,7 @@ pkgdesc='Pure Haskell parser and renderer for binary Olson timezone files'
 url='http://projects.haskell.org/time-ng/'
 license=('BSD')
 arch=('x86_64')
-depends=('ghc-libs' 'haskell-base' 'haskell-binary' 'haskell-bytestring'
-         'haskell-extensible-exceptions' 'haskell-time' 'haskell-timezone-series')
+depends=('ghc-libs' 'haskell-extensible-exceptions' 'haskell-timezone-series')
 makedepends=('ghc')
 source=(https://hackage.haskell.org/package/${_hkgname}-${pkgver}/${_hkgname}-${pkgver}.tar.gz)
 sha256sums=('8f57c369a72c4da5ba546d6e62370567e835cc2f6da406fd00e8dbb48e803b2d')
