--- a/asciidoc/PKGBUILD
+++ b/asciidoc/PKGBUILD
@@ -10,7 +10,7 @@
 # Contributor: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=asciidoc
-pkgver=10.1.1
+pkgver=10.1.3
 pkgrel=1
 pkgdesc='Text document format for short documents, articles, books and UNIX man pages'
 arch=('any')
@@ -27,36 +27,37 @@ optdepends=('graphviz: graphviz-filter'
             'fop: alternative pdf generation'
             'w3m: text generation'
             'lynx: alternative text generation')
-source=("https://github.com/asciidoc-py/asciidoc-py/archive/${pkgver}/${pkgname}-${pkgver}.tar.gz")
-# https://github.com/asciidoc-py/asciidoc-py/issues/234
-# source=("https://github.com/asciidoc-py/asciidoc-py/releases/download/$pkgver/$pkgname-$pkgver.tar.gz")
-sha256sums=('064e34241bd96e7239e8048596ceb03262d63145d04070d53906151f2042d007')
-b2sums=('1a8d6909fc1c21c0ec3f4728a9aaa2fea34fdc34e118161dfe5270a8a1a0a4f3640f9978e7f8512a85d17fd90a8e996b202b54b54dd4dd86fb537c1819bdd06b')
+source=("https://github.com/asciidoc-py/asciidoc-py/releases/download/$pkgver/$pkgname-$pkgver.tar.gz")
+sha256sums=('6cc01bea6ba435cafcc579753742b9c7e5438a61443bdd14110115d7a4dd90a5')
+b2sums=('61de9eaf7fe8570a1447d2ad514ad9baa97bd49f48dbde41b35a69019ee8bddae538a525880e866e531afcfc21179bbbc7e6c106d75265b2755309dc51faa451')
 
 prepare() {
-  cd ${pkgname}-py-${pkgver}
+  cd ${pkgname}-${pkgver}
+  # https://github.com/asciidoc-py/asciidoc-py/issues/201#issuecomment-1047494681
+  sed -i -e '/pytest$/s!$! tests/test_utils.py!' Makefile.in
+  # https://github.com/asciidoc-py/asciidoc-py/issues/234
   autoconf
-  # https://github.com/asciidoc-py/asciidoc-py/issues/201
-  sed -i -e '/pip install/s/\.$/--root $(DESTDIR) ./' Makefile.in
 }
 
 build() {
-  cd ${pkgname}-py-${pkgver}
+  cd ${pkgname}-${pkgver}
+  # https://github.com/asciidoc-py/asciidoc-py/issues/234#issuecomment-1045970138
   ./configure \
-    --prefix=/usr
+      --docdir /usr/share/doc/$pkgname \
+      --prefix /usr
   make build
   make manpages
 }
 
 check() {
-  cd ${pkgname}-py-${pkgver}
+  cd ${pkgname}-${pkgver}
   make test
 }
 
 package() {
-  cd ${pkgname}-py-${pkgver}
-  make install DESTDIR="${pkgdir}"
-  make docs DESTDIR="${pkgdir}"
+  cd ${pkgname}-${pkgver}
+  make DESTDIR="${pkgdir}" install
+  make DESTDIR="${pkgdir}" docs
   install -Dm0644 -t "$pkgdir/usr/share/man/man1/" doc/*.1
   # ascidocapi is deprecated, but still included in 10.x on a "provisional" basis
   local _platlib="$(python -c 'import sysconfig; print(sysconfig.get_paths()["platlib"])')"
