upgpkg: haskell-alsa-mixer 0.3.0-73 remove dep provided by ghc-libs

--- a/haskell-alsa-mixer/PKGBUILD
+++ b/haskell-alsa-mixer/PKGBUILD
@@ -8,8 +8,7 @@ pkgdesc='Bindings to the ALSA simple mixer API'
 url='https://hackage.haskell.org/package/alsa-mixer'
 license=('BSD')
 arch=('x86_64')
-depends=('ghc-libs' 'glibc' 'gmp' 'alsa-lib' 'haskell-base' 'haskell-unix'
-         'haskell-alsa-core' 'haskell-extensible-exceptions')
+depends=('ghc-libs' 'glibc' 'gmp' 'alsa-lib' 'haskell-alsa-core' 'haskell-extensible-exceptions')
 makedepends=('ghc' 'c2hs')
 source=(https://github.com/ttuegel/alsa-mixer/archive/${pkgver}/${pkgname}-${pkgver}.tar.gz)
 sha256sums=('afc9aba478e37af03f38707e0bddc8a2c2f51ddc27a93bd8b81a277077f72ccf')
