upgpkg: python-pytest-asyncio 0.17.0-1

--- a/python-pytest-asyncio/PKGBUILD
+++ b/python-pytest-asyncio/PKGBUILD
@@ -1,23 +1,19 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=python-pytest-asyncio
-pkgver=0.16.0
-pkgrel=4
+pkgver=0.17.0
+pkgrel=1
 pkgdesc="Pytest support for asyncio."
 arch=('any')
 license=('Apache')
 url="https://github.com/pytest-dev/pytest-asyncio/"
 depends=('python-pytest')
-makedepends=('python-setuptools')
-checkdepends=('python-coverage' 'python-async_generator' 'python-hypothesis')
+makedepends=('python-setuptools-scm')
+checkdepends=('python-flaky' 'python-hypothesis')
 source=("$pkgname-$pkgver.tar.gz::https://github.com/pytest-dev/pytest-asyncio/archive/v$pkgver.tar.gz")
-sha512sums=('f0059a6d05bf0c4e208f0058e30d5baf8284e630b8b91fa217f52eec18abe6b057dabfdadce2c5282e02bd4ea4cdb27f9ef62c4c308375cce1795d75a036db22')
+sha512sums=('cfff79cf0632153819c511d3751777858e87081b074bfb49f3fe49417d1be647b4d07a4b64149acec36b4e6b1872ac03f1055703c70cccce18648482c9b727db')
 
-prepare() {
-  cd pytest-asyncio-$pkgver
-  # Don't treat DeprecationWarnings as errors
-  sed -i '/filterwarnings = error/d' setup.cfg
-}
+export SETUPTOOLS_SCM_PRETEND_VERSION=$pkgver
 
 build() {
   cd pytest-asyncio-$pkgver
