--- a/vlc/PKGBUILD
+++ b/vlc/PKGBUILD
@@ -8,13 +8,14 @@ _vlcver=3.0.16
 # optional fixup version including hyphen
 _vlcfixupver=
 pkgver=${_vlcver}${_vlcfixupver//-/.r}
-pkgrel=7
+pkgrel=8
 pkgdesc='Multi-platform MPEG, VCD/DVD, and DivX player'
 url='https://www.videolan.org/vlc/'
 arch=('x86_64')
 license=('LGPL2.1' 'GPL2')
+# NOTE: switch to ffmpeg4.4, as ffmpeg >= 5 requires extensive changes disabling VAAPI (only supported with vlc >= 4)
 depends=('a52dec' 'libdvbpsi' 'libxpm' 'libdca' 'libproxy' 'lua52' 'libidn'
-         'libmatroska' 'taglib' 'libmpcdec' 'ffmpeg' 'faad2' 'libmad'
+         'libmatroska' 'taglib' 'libmpcdec' 'ffmpeg4.4' 'faad2' 'libmad'
          'libmpeg2' 'xcb-util-keysyms' 'libtar' 'libxinerama' 'libsecret'
          'libupnp' 'libixml.so' 'libupnp.so' 'libarchive' 'qt5-base'
          'qt5-x11extras' 'qt5-svg' 'freetype2' 'fribidi' 'harfbuzz'
@@ -28,8 +29,10 @@ makedepends=('gst-plugins-base-libs' 'live-media' 'libnotify' 'libbluray'
              'libvorbis' 'speex' 'opus' 'libtheora' 'libpng' 'libjpeg-turbo'
              'libx265.so' 'libx264.so' 'zvbi' 'libass' 'libkate' 'libtiger'
              'sdl_image' 'libpulse' 'alsa-lib' 'jack' 'libsamplerate' 'libsoxr'
-             'lirc' 'libgoom2' 'projectm' 'chromaprint' 'aom' 'srt' 'dav1d'
+             'lirc' 'libgoom2' 'projectm' 'aom' 'srt' 'dav1d'
              'aribb24' 'aribb25' 'pcsclite')
+
+#            'chromaprint: Chromaprint audio fingerprinter'
 optdepends=('avahi: service discovery using bonjour protocol'
             'aom: AOM AV1 codec'
             'gst-plugins-base-libs: for libgst plugins'
@@ -85,7 +88,6 @@ optdepends=('avahi: service discovery using bonjour protocol'
             'jack: jack audio server'
             'libsamplerate: audio Resampler'
             'libsoxr: SoX audio Resampler'
-            'chromaprint: Chromaprint audio fingerprinter'
             'lirc: lirc control'
             'libgoom2: Goom visualization'
             'projectm: ProjectM visualisation'
@@ -97,7 +99,7 @@ optdepends=('avahi: service discovery using bonjour protocol'
             'pcsclite: aribcam support')
 conflicts=('vlc-plugin')
 replaces=('vlc-plugin')
-options=('!emptydirs')
+options=(debug '!emptydirs')
 source=(https://download.videolan.org/${pkgname}/${_vlcver}/${pkgname}-${_vlcver}${_vlcfixupver}.tar.xz{,.asc}
         update-vlc-plugin-cache.hook
         caca-fix-to-newer-version.patch
@@ -138,6 +140,7 @@ build() {
   export LUAC=/usr/bin/luac5.2
   export LUA_LIBS="$(pkg-config --libs lua5.2)"
   export RCC=/usr/bin/rcc-qt5
+  export PKG_CONFIG_PATH="/usr/lib/ffmpeg4.4/pkgconfig/:$PKG_CONFIG_PATH"
 
   ./configure \
     --prefix=/usr \
@@ -208,7 +211,7 @@ build() {
     --enable-jack \
     --enable-samplerate \
     --enable-soxr \
-    --enable-chromaprint \
+    --disable-chromaprint \
     --enable-chromecast \
     --enable-qt \
     --enable-skins2 \
@@ -236,6 +239,9 @@ build() {
     --enable-aom \
     --enable-srt \
     --enable-dav1d
+
+  # prevent excessive overlinking due to libtool
+  sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0/g' libtool
   make
 }
 
