--- a/libpcap/PKGBUILD
+++ b/libpcap/PKGBUILD
@@ -4,14 +4,15 @@
 
 pkgname=libpcap
 pkgver=1.10.1
-pkgrel=1
+pkgrel=2
 pkgdesc='A system-independent interface for user-level packet capture'
-arch=('x86_64')
+arch=(x86_64)
 url='https://www.tcpdump.org/'
-license=('BSD')
-depends=('glibc' 'libnl' 'sh')
-makedepends=('bluez-libs' 'dbus')
-provides=('libpcap.so')
+license=(BSD)
+depends=(glibc libnl sh)
+makedepends=(bluez-libs dbus)
+provides=(libpcap.so)
+options=(debug)
 source=("https://www.tcpdump.org/release/${pkgname}-${pkgver}.tar.gz"{,.sig})
 sha512sums=('56c314f19c2b857742bf8abcb1e78066986aaa95cec339b75a3c8b70a9fa2b5167da98708352f9ec97a1cea2700cfb4e040bda108d58ac46cec9b7deab88d171'
             'SKIP')
@@ -20,13 +21,13 @@ b2sums=('0ec028e5d026a97b92ba6f23f88daf36b827eee08a752a0162fbabd1b5a2a70141ec403
 validpgpkeys=('1F166A5742ABB9E0249A8D30E089DEF1D9C15D0D') # The Tcpdump Group
 
 prepare() {
-  cd "$pkgname-$pkgver"
+  cd $pkgname-$pkgver
   autoreconf -fiv
 }
 
 build() {
-  cd "$pkgname-$pkgver"
-  ./configure --prefix='/usr' \
+  cd $pkgname-$pkgver
+  ./configure --prefix=/usr \
               --enable-ipv6 \
               --enable-bluetooth \
               --enable-usb \
@@ -35,10 +36,10 @@ build() {
 }
 
 package() {
-  depends+=('libdbus-1.so')
-  cd "$pkgname-$pkgver"
+  depends+=(libdbus-1.so)
+
+  cd $pkgname-$pkgver
   make DESTDIR="$pkgdir" install
   install -vDm 644 LICENSE -t "$pkgdir/usr/share/licenses/$pkgname/"
-  install -vDm 644 {CHANGES,{CONTRIBUTING,README}.md} \
-    -t "${pkgdir}/usr/share/doc/${pkgname}/"
+  install -vDm 644 {CHANGES,{CONTRIBUTING,README}.md} -t "$pkgdir/usr/share/doc/$pkgname/"
 }
