upgpkg: postgresql-old-upgrade 12.9-1
upstream release

12.9-1

--- a/postgresql-old-upgrade/PKGBUILD
+++ b/postgresql-old-upgrade/PKGBUILD
@@ -2,9 +2,9 @@
 # Maintainer: Dan McGee <dan@archlinux.org>
 
 pkgname=postgresql-old-upgrade
-pkgver=12.8
+pkgver=12.9
 _majorver=${pkgver%.*}
-pkgrel=5
+pkgrel=1
 pkgdesc='PostgreSQL build for migrating between major versions with pg_upgrade'
 url='https://www.postgresql.org/'
 arch=('x86_64')
@@ -17,9 +17,9 @@ optdepends=('python2: for PL/Python 2 support'
             'perl: for PL/Perl support'
             'tcl: for PL/Tcl support')
 source=(https://ftp.postgresql.org/pub/source/v${pkgver}/postgresql-${pkgver}.tar.bz2)
-sha256sums=('e26401e090c34ccb15ffb33a111f340833833535a7b7c5cd11cd88ab57d9c62a')
-sha512sums=('970fe1041e427ac1c8a786c93e2079b0a9c8b3fcaf9d38877894eb02e8a9afc7cd73d7ac28078c455845a922a1b7d9c1e22cb7990d8d523dd6496af9442fba01')
-b2sums=('20ad970f03665b9c1f24c646096476398c1791c49eb4f34bb6c3b1c7cf3955bb79ef81e178e5d72ffb91625a9ec1cff409fa95d390caa02862fec2599e6d8a9b')
+sha256sums=('89fda2de33ed04a98548e43f3ee5f15b882be17505d631fe0dd1a540a2b56dce')
+sha512sums=('11697d8283f5df5a9c74c2406e94d1b6da6df8358ad48f3b773825aab98e8395f9fd4e3fc8b1e6ebad3743c3dadbda8b795d4fe84a447d7913223e136cf2b88f')
+b2sums=('fc88d61d369569a3054b889848eaf1405a4f5137cd8c2cf27282115f70853dd4d5d8b4bf0a9fc60c63db936246a0a64077c9bfdb90685d4dfe375558e4519b2b')
 
 build() {
   cd postgresql-${pkgver}
@@ -42,6 +42,8 @@ build() {
     --disable-nls
     --enable-thread-safety
   )
+
+  CFLAGS+=" -ffat-lto-objects" # Fix static libs
 
   # only build plpython3 for now
   ./configure "${options[@]}" \
