--- a/java11-openjdk/PKGBUILD
+++ b/java11-openjdk/PKGBUILD
@@ -1,5 +1,6 @@
 # Maintainer: Levente Polyak <anthraxx[at]archlinux[dot]org>
-# Maintainer: Guillaume ALAUX <guillaume@archlinux.org>
+# Maintainer: Frederik Schwan <freswa at archlinux dot org>
+# Contributor: Guillaume ALAUX <guillaume@archlinux.org>
 
 # TODO add test, see about packaging jtreg and using it here
 # TODO see about building with OpenJDK10
@@ -15,10 +16,10 @@ pkgbase=java11-openjdk
 pkgname=('jre11-openjdk-headless' 'jre11-openjdk' 'jdk11-openjdk' 'openjdk11-src' 'openjdk11-doc')
 _majorver=11
 _minorver=0
-_securityver=13
-_updatever=8
-pkgrel=1
+_securityver=15
+_updatever=3
 pkgver=${_majorver}.${_minorver}.${_securityver}.u${_updatever}
+pkgrel=1
 _git_tag=jdk-${_majorver}.${_minorver}.${_securityver}+${_updatever}
 arch=('x86_64')
 url='https://openjdk.java.net/'
@@ -27,11 +28,12 @@ makedepends=('java-environment>=10' 'java-environment<12' 'cpio' 'unzip' 'zip' '
              'libxrender' 'libxtst' 'libxt' 'libxext' 'libxrandr' 'alsa-lib' 'pandoc'
              'graphviz' 'freetype2' 'libjpeg-turbo' 'giflib' 'libpng' 'lcms2'
              'libnet' 'bash' 'harfbuzz' 'glibc' 'gcc-libs')
+options=(!lto)
 source=(https://github.com/openjdk/jdk${_majorver}u/archive/${_git_tag}.tar.gz
         freedesktop-java.desktop
         freedesktop-jconsole.desktop
         freedesktop-jshell.desktop)
-sha256sums=('119c6233fe7ff5670c590e2f9d6686ac4d80c97b17065506998b75c547b54f2c'
+sha256sums=('0fae80f730d890611d801a5a61d6a08a7b1e3b687b80fc5ee4aa02b5cbd99a41'
             '575587ad58dfa9908f046d307b9afc7b0b2eb20a1eb454f8fdbbd539ea7b3d01'
             '2f57b7c7dd671eabe9fa10c4f1283573e99d7f7c36eccd82c95b705979a2e8cb'
             'f271618a8c2a892b554caf26857af41efdf0d8bcb95d57ce7ba535d6979e96da')
