--- a/ncurses/PKGBUILD
+++ b/ncurses/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=ncurses
 pkgver=6.3
-pkgrel=1
+pkgrel=2
 pkgdesc='System V Release 4.0 curses emulation library'
 arch=(x86_64)
 url='https://invisible-island.net/ncurses/ncurses.html'
@@ -15,6 +15,7 @@ makedepends=(autoconf-archive)
 optdepends=('bash: for ncursesw6-config')
 provides=(libncurses++w.so libformw.so libmenuw.so libpanelw.so libncursesw.so)
 replaces=(alacritty-terminfo)
+options=(debug)
 source=(
   "https://invisible-mirror.net/archives/${pkgname}/${pkgname}-${pkgver}.tar.gz"{,.asc}
   "${pkgname}-6.3-libs.patch"
@@ -53,15 +54,13 @@ build() {
     --with-pkg-config-libdir=/usr/lib/pkgconfig \
     --with-shared \
     --with-versioned-syms \
-    --without-ada \
-    --without-debug
+    --without-ada
   make
 }
 
 package() {
-  cd $pkgname-$pkgver
-  make DESTDIR="$pkgdir" install
-  install -vDm 644 COPYING -t "$pkgdir/usr/share/licenses/$pkgname/"
+  make DESTDIR="$pkgdir" install -C $pkgname-$pkgver
+  install -vDm 644 $pkgname-$pkgver/COPYING -t "$pkgdir/usr/share/licenses/$pkgname/"
 
   # fool packages looking to link to non-wide-character ncurses libraries
   for lib in ncurses ncurses++ form panel menu; do
