--- a/libcap/PKGBUILD
+++ b/libcap/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=libcap
 pkgver=2.63
-pkgrel=1
+pkgrel=2
 pkgdesc="POSIX 1003.1e capabilities"
 arch=(x86_64)
 url="https://sites.google.com/site/fullycapable/"
@@ -13,6 +13,7 @@ license=(GPL2)
 depends=(glibc pam)
 makedepends=(linux-api-headers)
 provides=(libcap.so libpsx.so)
+options=(debug)
 source=("https://kernel.org/pub/linux/libs/security/linux-privs/${pkgname}2/${pkgname}-$pkgver.tar."{xz,sign}
 )
 sha512sums=('832842b71ca32db8f53ca5f1a3010f14e7f42693f62f29632e9948c860f990899bb094165c37307ce8b9e5bc5eb1c833e780ebca98442df3e6d900e4b238834b'
@@ -22,15 +23,15 @@ b2sums=('a49a628f5b9ddf5a3d077428544a53b9cdedf62053ff296a0aa7d61e12ca05f9ba7597f
 validpgpkeys=(38A644698C69787344E954CE29EE848AE2CCF3F4) # Andrew G. Morgan <morgan@kernel.org>
 
 build() {
-  make DYNAMIC=yes KERNEL_HEADERS='/usr/include' lib='lib' prefix='/usr' sbindir='bin' -C "$pkgname-$pkgver"
+  make DYNAMIC=yes KERNEL_HEADERS=/usr/include lib=lib prefix=/usr sbindir=bin -C $pkgname-$pkgver
 }
 
 check() {
-  make test -k -C "$pkgname-$pkgver"
+  make test -k -C $pkgname-$pkgver
 }
 
 package() {
-  make DESTDIR="$pkgdir" RAISE_SETFCAP='no' lib='lib' prefix='/usr' sbindir='bin' install -C "$pkgname-$pkgver"
-  install -vDm 644 "$pkgname-$pkgver/"{CHANGELOG,README} -t "${pkgdir}/usr/share/doc/${pkgname}/"
-  install -vDm 644 "$pkgname-$pkgver/pam_cap/capability.conf" -t "$pkgdir/usr/share/doc/$pkgname/examples/"
+  make DESTDIR="$pkgdir" RAISE_SETFCAP=no lib=lib prefix=/usr sbindir=bin install -C $pkgname-$pkgver
+  install -vDm 644 $pkgname-$pkgver/{CHANGELOG,README} -t "$pkgdir/usr/share/doc/$pkgname/"
+  install -vDm 644 $pkgname-$pkgver/pam_cap/capability.conf -t "$pkgdir/usr/share/doc/$pkgname/examples/"
 }
