--- a/mtr/PKGBUILD
+++ b/mtr/PKGBUILD
@@ -4,17 +4,17 @@
 
 pkgbase=mtr
 pkgname=('mtr' 'mtr-gtk')
-pkgver=0.94
+pkgver=0.95
 pkgrel=1
 pkgdesc='Combines the functionality of traceroute and ping into one tool'
 url='https://www.bitwizard.nl/mtr/'
 arch=('x86_64')
 license=('GPL2')
-makedepends=('ncurses' 'gtk2' 'libcap')
+makedepends=('ncurses' 'gtk2' 'libcap' 'gdk-pixbuf2')
 install=mtr.install
 source=(https://github.com/traviscross/mtr/archive/v${pkgver}/${pkgname}-${pkgver}.tar.gz)
-sha512sums=('0e58bd79562ff80f9308135562ab22aa1f1eea686aefd3aef07bac05e661e34b60fde7c66c96bf4f0919f546376fbd6106ecd8fa92328c24f6f903097496bf11')
-b2sums=('e9b4619a85a515d729f0987d5882fb91e4bfa3be82476efbfdb832d0b13ed334be1c1a1bcf8ab4ca820002e79ca4a24d0b50f2739d9284b7dec0b8852a1a91e0')
+sha512sums=('a7d69e0c551a10ae80a650a34588119e6c6b124a8c2c93d3de29e5daa6ef99f9217d875529d443c3760cd6fd7bd04d1e9abe33ef12635826c66a98bd776c1690')
+b2sums=('3c972675b97945b96562802c5d0f10de963160682c93c0ea2991b72eca33d136d18948c5e746ca3dfb280ebc9c3ab154e7774f8409ed4e5f7470a8feb128e71b')
 
 prepare() {
   (cd ${pkgbase}-${pkgver}
@@ -42,7 +42,7 @@ build() {
 
 package_mtr() {
   pkgdesc='Combines the functionality of traceroute and ping into one tool (CLI version)'
-  depends=('ncurses' 'libcap')
+  depends=('ncurses' 'libcap' libncursesw.so)
   optdepends=('bash-completion: bash completion support')
   cd ${pkgbase}-${pkgver}-cli
   make DESTDIR="${pkgdir}" install
@@ -50,7 +50,8 @@ package_mtr() {
 
 package_mtr-gtk() {
   pkgdesc='Combines the functionality of traceroute and ping into one tool (GTK version)'
-  depends=('ncurses' 'libcap' 'gtk2')
+  depends=('ncurses' 'libcap' 'gtk2' 'gdk-pixbuf2'
+           libgtk-x11-2.0.so libgdk_pixbuf-2.0.so libgobject-2.0.so libglib-2.0.so libncursesw.so)
   optdepends=('bash-completion: bash completion support')
   conflicts=('mtr')
   provides=("mtr=${pkgver}")
