--- a/vpnc/PKGBUILD
+++ b/vpnc/PKGBUILD
@@ -3,10 +3,10 @@
 # Contributor: Thomas Baechler <thomas@archlinux.org>
 
 pkgname=vpnc
-_vpnc_commit=43780cecd7a61668002f73b6f8b9f9ba61af74ad
-_vpncscripts_commit=8fff06090ed193c4a7285e9a10b42e6679e8ecf3
-pkgver=0.5.3.r496.r153
-pkgrel=2
+_vpnc_commit=249d8fcd0ac25b735638bbe31e86a591acd61348
+_vpncscripts_commit=92fe06f6589dcc21725c51b8f86051482bf3b1bd
+pkgver=0.5.3.r501.r196
+pkgrel=1
 epoch=1
 pkgdesc='VPN client for cisco3000 VPN Concentrators'
 url='https://github.com/streambinder/vpnc'
@@ -19,9 +19,11 @@ optdepends=('openresolv: Let vpnc manage resolv.conf')
 backup=('etc/vpnc/default.conf')
 source=("vpnc::git+https://github.com/streambinder/vpnc#commit=${_vpnc_commit}"
         "vpnc-scripts::git+https://gitlab.com/openconnect/vpnc-scripts.git#commit=${_vpncscripts_commit}"
+        git+https://github.com/streambinder/vpnc.wiki.git
         vpnc.conf
         vpnc@.service)
 sha512sums=('SKIP'
+            'SKIP'
             'SKIP'
             'ac70712192c01ff638a9badc5cff7105bee5c4fed5d3a3b728e9597661952d156041c82fe1e544e2bab602d193d4105d3689c79c46d964623f6ce38dd89f0ea7'
             'cafcab676986c1a2e49441f01d61997f1c6b54bbb68661b9af007d4816f8e76eee6b7ac2dfab55b55965fa407e8331c663cf11aa79384c30b0c9049c1477b791')
@@ -35,6 +37,11 @@ pkgver() {
 
 prepare() {
   cd ${pkgname}
+
+  git submodule init
+  git config submodule."src/doc".url "${srcdir}/vpnc.wiki"
+  git submodule update --recursive
+
   # Build hybrid support
   sed 's|^#OPENSSL|OPENSSL|g' -i Makefile
   # fix resolvconf location for community/openresolv
@@ -53,11 +60,12 @@ check() {
 
 package() {
   cd ${pkgname}
+  install -d "${pkgdir}/usr/share/doc/${pkgname}"
   make DESTDIR="${pkgdir}" PREFIX=/usr SBINDIR=/usr/bin install
+  install -Dm 755 ../vpnc-scripts/vpnc-script -t "${pkgdir}/etc/vpnc"
   install -Dm 644 ../vpnc@.service -t "${pkgdir}/usr/lib/systemd/system"
-  install -Dm 644 LICENSE -t "${pkgdir}/usr/share/licenses/${pkgname}"
   install -Dm 644 .github/README.md -t "${pkgdir}/usr/share/doc/${pkgname}"
-  install -Dm 744 ../vpnc-scripts/vpnc-script -t "${pkgdir}/etc/vpnc"
+  install -Dm 644 LICENSE -t "${pkgdir}/usr/share/licenses/${pkgname}"
 }
 
 # vim: ts=2 sw=2 et:
