upgpkg: ncdu 2.1-1; upgrade to 2.1

--- a/ncdu/PKGBUILD
+++ b/ncdu/PKGBUILD
@@ -1,34 +1,35 @@
-# Maintainer: Eli Schwartz <eschwartz@archlinux.org>
 # Maintainer: Levente Polyak <anthraxx[at]archlinux[dot]org>
+# Maintainer: Andreas 'Segaja' Schleifer <segaja at archlinux dot org>
+# Contributor: Eli Schwartz <eschwartz@archlinux.org>
 # Contributor: lp76 <l.peduto@gmail.com>
 # Contributor: Daenyth <Daenyth+Arch AT gmail DOT com>
 # Contributor: Gaetan Bisson <bisson@archlinux.org>
 
 pkgname=ncdu
-pkgver=1.16
-pkgrel=2
+pkgver=2.1
+pkgrel=1
 pkgdesc='Disk usage analyzer with an ncurses interface'
 url='https://dev.yorhel.nl/ncdu'
 license=('MIT')
 depends=('ncurses')
+makedepends=('zig')
 arch=('x86_64')
 source=("https://dev.yorhel.nl/download/${pkgname}-${pkgver}.tar.gz"{,.asc})
-sha256sums=('2b915752a183fae014b5e5b1f0a135b4b408de7488c716e325217c2513980fd4'
+sha256sums=('4ba8d20a64a55cc00af2d2c6138afcc9dc25e40a5ed6a8c544cb9e2285a195fe'
             'SKIP')
-b2sums=('61d004581bdcf1885bec24d0a1de4fc890fe91bba511abbdbc507a48f31946caf5c7324979e8410e53cfca8ada1b20342b737dc4e8b1f034f2fca5aea84e4369'
+b2sums=('9dd90b63ad7edbd402b0cdab7f5aa5263c6df562afb15229b5c2b6143cf7efc7af94fabcd710593b2fd94fca02742e08b401fc0103b1154c6cd278f5709eeef8'
         'SKIP')
 validpgpkeys=('74460D32B80810EBA9AFA2E962394C698C2739FA') # Yoran Heling <projects@yorhel.nl>
 
 build() {
     cd "${srcdir}/${pkgname}-${pkgver}"
 
-    ./configure --prefix=/usr
     make
 }
 
 package() {
     cd "${srcdir}/${pkgname}-${pkgver}"
 
-    make DESTDIR="${pkgdir}" install
-    install -Dm644 COPYING "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
+    make install PREFIX="${pkgdir}/usr"
+    install -Dm644 LICENSES/MIT.txt "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 }
