--- a/aliyun-cli/PKGBUILD
+++ b/aliyun-cli/PKGBUILD
@@ -2,15 +2,15 @@
 # Contributor: Andreas 'Segaja' Schleifer <archlinux at segaja dot de>
 
 pkgname=aliyun-cli
-_gitcommit=7e290f756a5bc6033192f1409a2fd837e0e68b80
-pkgver=3.0.111
-pkgrel=1
+_gitcommit=69877d23c87873e22a1fb3ffe41ee83fa8e76dbb
+pkgver=3.0.112
+pkgrel=2
 pkgdesc='Alibaba Cloud CLI'
 arch=('x86_64')
 url='https://github.com/aliyun/aliyun-cli'
 license=('APACHE')
 depends=('glibc')
-makedepends=('git' 'go' 'go-bindata')
+makedepends=('git' 'go')
 source=("git+${url}#commit=${_gitcommit}"
         git+https://github.com/aliyun/aliyun-openapi-meta)
 sha512sums=('SKIP'
@@ -27,7 +27,7 @@ prepare() {
   cd ${pkgname}
   git submodule init
   git config submodule."aliyun-openapi-meta".url "${srcdir}/aliyun-openapi-meta"
-  git submodule update --recursive
+  git submodule update --init --recursive
 }
 
 build() {
@@ -38,13 +38,6 @@ build() {
   export CGO_CXXFLAGS="${CXXFLAGS}"
   export GOFLAGS="-buildmode=pie -trimpath -mod=readonly -modcacherw -ldflags=-linkmode=external"
 
-  echo "generating bindata..."
-  go-bindata \
-      -o resource/metas.go \
-      -pkg resource \
-      ./aliyun-openapi-meta/...
-
-  echo "building..."
   go build \
     -ldflags "-linkmode=external -extldflags '${LDFLAGS}' -X 'github.com/aliyun/aliyun-cli/cli.Version=${pkgver}'" \
     -o ./out/aliyun ./main/main.go
