upgpkg: live-media 2022.02.07-1
upstream release

Update to 2022.02.07

--- a/live-media/PKGBUILD
+++ b/live-media/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Gilles CHAUVIN <gcnweb@gmail.com>
 
 pkgname=live-media
-pkgver=2021.08.24
+pkgver=2022.02.07
 pkgrel=1
 pkgdesc='Set of C++ libraries for multimedia streaming'
 url='http://live555.com/liveMedia'
@@ -12,11 +12,13 @@ license=('LGPL')
 depends=('gcc-libs' 'openssl')
 options=('staticlibs')
 source=(https://download.videolan.org/contrib/live555/live.${pkgver}.tar.gz)
-sha256sums=('ce95a1c79f6d18e959f9dc129b8529b711c60e76754acc285e60946303b923ec')
-sha512sums=('f776e43a9b0792fd41e43f3c06e48f5d766c405d6af4ed5ddac108723f222c844ec5dbe29701b62dff760fbed777935ffc9149080b45d7a7b4c655a7f1fe6dae')
+sha256sums=('6f0c1f8a71ceb506bcbf969b02b4b0c3697b4e15daeb6dcba9872c8745ce92c6')
+sha512sums=('5ca9c675c9b719566111053c4e60d2e85e4f7f8081ec947f0e152ee583b5cbe0625e57e8a345e90829452efd6c42c7986609403b4e6e0f0c0124b73d94a35af4')
 
 build() {
   cd live
+  export CFLAGS+=" -ffat-lto-objects"
+  export CXXFLAGS+=" -ffat-lto-objects"
   sed -E 's|(-DSOCKLEN_T=socklen_t)|\1 -fPIC -DRTSPCLIENT_SYNCHRONOUS_INTERFACE=1|g' -i config.linux
   ./genMakefiles linux
   make
