upgpkg: fping 5.1-2: apply upstream commits (FS#74192)

--- a/fping/PKGBUILD
+++ b/fping/PKGBUILD
@@ -3,20 +3,32 @@
 # Contributor: Tom Newsom <Jeepster@gmx.co.uk>
 
 pkgname=fping
-pkgver=5.0
-pkgrel=1
+pkgver=5.1
+pkgrel=2
 pkgdesc='Utility to ping multiple hosts at once'
 url='https://www.fping.org/'
 arch=('x86_64')
 license=('custom')
 depends=('glibc')
 install=${pkgname}.install
-source=(https://www.fping.org/dist/${pkgname}-${pkgver}.tar.gz{,.asc})
-sha512sums=('c843f7bb7c4e3289c4dd9eb8ae2ab93a363316c0000aac9187f79580a3d2505df179f2e0ae9e0a791c74bfc9e17c476874f8e122dfa6ad74930498c4e02d0de3'
-            'SKIP')
-b2sums=('6dbb6708ecb55c1f1281bcd9e298475a1ad3a21aa81d8488b61cb39ad07d1d7285247a3c39883cbaae0b1a0e4403b6340ea7ec43411b81546f0e8eeefb02ef88'
-        'SKIP')
 validpgpkeys=('8D1E89B8FBA920A5A609F2615A11A22BC5A1F734') # David Schweikert <david@schweikert.ch>
+source=("https://www.fping.org/dist/${pkgname}-${pkgver}.tar.gz"{,.asc}
+        '0001-fix-unprivileged-ping-broken-in-v5.1-fixes-248.patch'
+        '0002-fix-socket4-vs-socket6-typo-249-thanks-sfan5.patch')
+sha512sums=('1a208da8dcd99093d0512af5d85ba5e7b5743ec97993d24c1fe612bb58d93090ac1ba0952f648aa075f16d390a77c4be65e394ae56dbede2a6914e0e8c68e2bd'
+            'SKIP'
+            'f9847470d63ba0e40fc5ce77c0689fcd858ded55ed0727308f55cbb6648b93da4bf05a35414a67054a1eb406ba8c8b29e044b6269506c8f5a70ae991e6c43152'
+            'c098fc5d4e1ac7aa504cc1d92a78c05650f76d43380f0a7c719b5a717721cb327134d7fb62a6d06ba829daeda477e705b0b9f3f944742e9cf90ece5091111b96')
+b2sums=('2fb344e650b5a359fb8780f2c599455d39405ae823edf695ee4385aa2661dc5811e088bafa1b9f53846ee90c0afa959a92832381a03346d1fda048eb4e7ee098'
+        'SKIP'
+        '593299e217cf34b6d8ddb8b8ac8ac8bc96f417f14188c78277f0afd37538b7e525d1a235129d10f14b6e16a69afde3a48e179883459b586a17c7314483de4824'
+        'b3f4e4248e27b027ad07c9d1650fb93e6f672729d3bf02b1c89e3f75ecd9471a0e2b9663bc5473dcbc9ead6e10e1b4415d94599c9064762872e2116936446676')
+
+prepare() {
+  cd ${pkgname}-${pkgver}
+  patch -Np1 < ../0001-fix-unprivileged-ping-broken-in-v5.1-fixes-248.patch
+  patch -Np1 < ../0002-fix-socket4-vs-socket6-typo-249-thanks-sfan5.patch
+}
 
 build() {
   cd ${pkgname}-${pkgver}
