--- a/vala/PKGBUILD
+++ b/vala/PKGBUILD
@@ -4,8 +4,8 @@
 # Contributor: Timm Preetz <timm@preetz.us>
 
 pkgname=vala
-pkgver=0.54.7
-pkgrel=1
+pkgver=0.56.0
+pkgrel=2
 pkgdesc='Compiler for the GObject type system'
 url='https://wiki.gnome.org/Projects/Vala'
 arch=(x86_64)
@@ -16,7 +16,8 @@ checkdepends=(dbus libx11 gobject-introspection)
 provides=(valadoc libvala-${pkgver%.*}.so libvaladoc-${pkgver%.*}.so)
 conflicts=(valadoc)
 replaces=(valadoc)
-_commit=1a4aac8f53b388220bf291f0814e0724e003dca8  # tags/0.54.7^0
+options=(debug)
+_commit=e6f675dc4916334e46b0e1af19d072bec48f39ca  # tags/0.56.0^0
 source=("git+https://gitlab.gnome.org/GNOME/vala.git#commit=$_commit")
 sha256sums=('SKIP')
 
