upgpkg: zstd 1.5.2-3 Make sure libzstd.pc no longer sets it's prefix to /usr/local

--- a/zstd/PKGBUILD
+++ b/zstd/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=zstd
 pkgver=1.5.2
-pkgrel=2
+pkgrel=3
 pkgdesc='Zstandard - Fast real-time compression algorithm'
 url='https://facebook.github.io/zstd/'
 arch=(x86_64)
@@ -23,7 +23,8 @@ validpgpkeys=(4EF4AC63455FC9F4545D9B7DEF8FE99528B52FFD)
 
 build() {
   cd ${pkgname}-${pkgver}
-  make
+  # Set PREFIX, as libzstd.pc is otherwise generated with -L/usr/local
+  make PREFIX=/usr
   make -C contrib/pzstd
 }
 
