upgpkg: rz-cutter 2.0.5-1 Update to 2.0.5, rebuild with pyside2 5.15.3 (FS#74227)

--- a/rz-cutter/PKGBUILD
+++ b/rz-cutter/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Aaron McDaniel (mcd1992) <'aur' at the domain 'fgthou.se'>
 
 pkgname=rz-cutter
-_gitcommit=78a9a112099e0d045773d77f4b1166fc3b7d2eef
-pkgver=2.0.4
+_gitcommit=f5a7a79ee8efc04514189565b1d319c7a39bf0de
+pkgver=2.0.5
 pkgrel=1
 pkgdesc='Qt and C++ GUI for rizin reverse engineering framework'
 url='https://github.com/rizinorg/cutter'
@@ -30,6 +30,8 @@ prepare() {
   cd cutter
   git config 'submodule.src/translations.url' "${srcdir}/cutter-translations"
   git submodule update --init src/translations
+
+  git cherry-pick -n 1ef6d1269cf0ffde2d91eb067134ee9215791296 # Fix build with syntax-highlighting 5.92
 }
 
 build() {
