--- a/radare2/PKGBUILD
+++ b/radare2/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Guillermo Ramos <0xwille at gmail dot com>
 
 pkgname=radare2
-pkgver=5.4.2
+pkgver=5.6.6
 pkgrel=1
 pkgdesc='Open-source tools to disasm, debug, analyze and manipulate binary files'
 url='https://radare.org'
@@ -15,10 +15,16 @@ makedepends=('meson')
 optdepends=('r2ghidra: ghidra decompiler plugin')
 options=('!emptydirs')
 source=(https://github.com/radare/radare2/archive/${pkgver}/${pkgname}-${pkgver}.tar.gz)
-sha512sums=('238d36489be6cdd9a59fe2af61f78fb2b9cd48f0529d5023b64b040f3a79ef3712119a9a120603c766a2eef027562032fb500173f8b4be21242559662fda2a9f')
-b2sums=('5a05103ae44fbf395bbec00b7427fece6446bf8a8c98eff9ed11cee14004682acccfa135d151006c656f944e3e2f53e7bbb328615ef0785c080562a0d55a9425')
+sha512sums=('0969d923b0c65c937dadb3cef655a3931b3daf1fc48bf1f6e3dd1afd1df54f65da3baf4bd401eb1677f88566774ed115c271cdc923dc4ef800ef867f4849efb0')
+b2sums=('a0a15e9eaec4466d0855cd6973e2b166fadb1aeb1a9fe91556fe69ca8e4893dbc2313033ce1a4dfde123e40b44e20524e006a67f7b0a5581ceb035603e587268')
 
 build() {
+
+# XXX: tree-sitter was removed in this release
+# https://github.com/radareorg/radare2/commit/cbc949c039d0aea8566657f7a177d7b2f95ee9b4
+#   -D use_sys_tree_sitter=true \
+#   -D tree-sitter-sync=true
+
   cd ${pkgname}-${pkgver}
   touch libr/config.mk
   arch-meson build \
@@ -30,10 +36,9 @@ build() {
     -D use_sys_lz4=true \
     -D use_sys_xxhash=true \
     -D use_sys_openssl=true \
-    -D use_sys_tree_sitter=true \
     -D use_libuv=true \
-    -D use_webui=true \
-    -D tree-sitter-sync=true
+    -D use_webui=true 
+
   ninja -C build
 }
 
