--- a/radare2/PKGBUILD
+++ b/radare2/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=radare2
 pkgver=5.6.6
-pkgrel=2
+pkgrel=3
 pkgdesc='Open-source tools to disasm, debug, analyze and manipulate binary files'
 url='https://radare.org'
 arch=('x86_64')
@@ -45,7 +45,8 @@ build() {
     -D use_sys_xxhash=true \
     -D use_sys_openssl=true \
     -D use_libuv=true \
-    -D use_webui=true
+    -D use_webui=true \
+    -D want_threads=false
 
   ninja -C build
 }
