upgpkg: iaito 5.5beta0.r16.g24a2eba2-1
upstream release

--- a/iaito/PKGBUILD
+++ b/iaito/PKGBUILD
@@ -3,9 +3,9 @@
 # Contributor: Aaron McDaniel (mcd1992) <'aur' at the domain 'fgthou.se'>
 
 pkgname=iaito
-_gitcommit=b1bafef891694c34aaf41b9bb0110659be7fe7a0
-pkgver=5.3.1
-pkgrel=3
+_gitcommit=24a2eba21c43f42aa4535278be20ff7e957c884d
+pkgver=5.5beta0.r16.g24a2eba2
+pkgrel=1
 pkgdesc='Qt and C++ GUI for radare2 reverse engineering framework'
 url='https://github.com/radareorg/iaito'
 arch=('x86_64')
@@ -24,7 +24,7 @@ b2sums=('SKIP'
 
 pkgver() {
   cd iaito
-  git describe --tags | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
+  git describe --tags | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g' | sed 's/5.5.0.beta/5.5beta0/'
 }
 
 prepare() {
@@ -52,8 +52,6 @@ build() {
 package() {
   cd iaito
   DESTDIR="${pkgdir}" ninja -C src/build install
-  install -d "${pkgdir}/usr/share/doc/${pkgname}"
-  cp -a docs/* "${pkgdir}/usr/share/doc/${pkgname}"
 }
 
 # vim: ts=2 sw=2 et:
