upgpkg: uutils-coreutils 0.0.13-2: Use multicall binary (fixes FS#74413)

--- a/uutils-coreutils/PKGBUILD
+++ b/uutils-coreutils/PKGBUILD
@@ -5,7 +5,7 @@
 _pkgname=coreutils
 pkgname=uutils-$_pkgname
 pkgver=0.0.13
-pkgrel=1
+pkgrel=2
 pkgdesc='Cross-platform Rust rewrite of the GNU coreutils'
 arch=('x86_64')
 url='https://github.com/uutils/coreutils'
@@ -50,7 +50,8 @@ package() {
       PREFIX=/usr \
       MANDIR=/share/man/man1 \
       PROG_PREFIX=uu- \
-      PROFILE=release
+      PROFILE=release \
+      MULTICALL=y
 
   install -Dm 644 LICENSE "$pkgdir"/usr/share/licenses/$pkgname/LICENSE
 }
